Merge 'master' and 'named_exprs'